--- a/install/.htaccess
+++ b/install/.htaccess
@@ -3,5 +3,5 @@
 	RewriteBase /
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
-	RewriteRule . /index.php [L]
+	RewriteRule . __PATH_ROOT__index.php [L]
 </IfModule>
